--- a/index.html
+++ b/index.html
@@ -30,29 +30,30 @@
                     ng-click="addItem()" title="+"><button ng-show="data.newTodo.length" class="addBtn">ADD</button></span>
             </form>
             <ul>
-                <li ng-repeat="todos in data.todo">
-                    <button ng-click="checkItem(todos)">Check</button>
+                <li ng-repeat="todos in data.todo" ng-click="checkItem(todos)" ng-class="temp">
                     {{todos.name}}
-                    <button ng-click="removeItem(todos)">&times
-                    </button>
+                    <span class="close" ng-click="removeItem(todos)">X
+                    </span>
                 </li>
             </ul>
         </div>
         <div ng-show="button=='done'">
-            <input type="text" ng-model="searchText" ng-model-instant id="Input"  placeholder="Search..."/>
+            <input type="text" ng-model="searchText" ng-model-instant placeholder="Search..."/>
             <ul>
                 <li ng-repeat="todos in data.check|filter:searchText">
                     <span>{{todos.name}}</span>
                 </li>
             </ul>
+            <button ng-model="data.check" ng-click="removeAll(data.check)" ng-show="data.check.length">Delete ALL items</button>
         </div>
         <div ng-show="button=='archive'">
-            <input type="text" ng-model="searchText" ng-model-instant id="Input"  placeholder="Search..."/>
+            <input type="text" ng-model="searchText" ng-model-instant  placeholder="Search..."/>
             <ul>
                 <li ng-repeat="todos in data.archive|filter:searchText">
-                    <span>{{todos.name}}</span>
+                    <span ng-click="">{{todos.name}}</span>
                 </li>
             </ul>
+            <button ng-model="data.archive" ng-click="removeAll(data.archive)" ng-show="data.archive.length">Delete ALL items</button>
         </div>
         <!--<h2 ng-model="data.todo" ng-show="data.todo.length">Total:{{getCountOfCompleted()}}/{{data.todo.length}}</h2>-->
         <!-- <button ng-click="removeCompletedItems()" ng-show="data.todo.length">Clear</button>-->
