--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/animate.css">
 </head>
 <body ng-app>
 <div class="column" ng-controller="ngAppExampleController">
@@ -30,7 +31,7 @@
                     ng-click="addItem()" title="+"><button ng-show="data.newTodo.length" class="addBtn">ADD</button></span>
             </form>
             <ul>
-                <li ng-repeat="todos in data.todo" ng-click="checkItem(todos)" ng-class="temp">
+                <li ng-click="temp='animated bounceOutDown checked';checkItem(todos)" ng-class="temp" ng-repeat="todos in data.todo"  >
                     {{todos.name}}
                     <span class="close" ng-click="removeItem(todos)">X
                     </span>
