--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.6/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Syncopate" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/animate.css">
     <script src="js/angular-animate.js"></script>
 </head>
 <body ng-app>
-<div class="column" ng-controller="ngAppExampleController">
+<div class="column wrapper" ng-controller="ngAppExampleController">
     <h1>TO DO LIST</h1>
     <div id="ngAppExample">
         <ul class="menu">
@@ -25,14 +27,13 @@
 
         <div ng-show="button=='list'"class="main">
             <form>
-                <input type="text" ng-model="data.newTodo" ng-model-instant id="Input" placeholder="title..."/><span
+                <input type="text" ng-model="data.newTodo" ng-model-instant id="Input" placeholder="Just do it!"/><span
                     ng-click="addItem()" title="+"><button class="button"><span>ADD</span></button></span>
             </form>
             <ul class="list" ng-model="data.todo">
                 <h4 ng-show="!data.todo.length">TO DO LIST! Special for TeachMeSkills</h4>
                 <li ng-repeat="todos in data.todo" ng-click="checkItem(todos);" ng-class="todos.className">
-                    {{todos.name}}
-                    <span class="close" ng-click="removeItem(todos)">&#215;
+                    {{todos.name}}<span class="close" ng-click="removeItem(todos)">&#215;
                     </span>
                 </li>
             </ul>
@@ -52,15 +53,16 @@
             <input type="text" ng-model="searchText" ng-model-instant placeholder="Search..."/>
             <ul class="done" ng-model="data.archive">
                 <h4 ng-show="!data.archive.length">Здесь хранятся удаленные элементы списка</h4>
-                <li ng-repeat="todos in data.archive|filter:searchText" ng-class="todos.className">
+                <li ng-repeat="todos in data.archive|filter:searchText" ng-class="todos.className" ng-init="temp=false" ng-mouseover="temp=true">
                     {{todos.name}}<span class="close" ng-click="removeItemForever(todos,data.archive)">&#215;
                     </span>
+                    <div ng-show="temp==true">Created: {{todos.created}}</div>
                 </li>
             </ul>
         </div>
        <h2 ng-model="data.todo" ng-show="data.todo.length">Total:{{data.todo.length}}</h2>
-      
         </ul>
+        <footer>Coded by DR</footer>
     </div>
     <script src="js/angular.js"></script>
 </div>
